--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Sistema ósseo - Realidade Aumentada.sln"
+    "dotnet.defaultSolution": "BoneSystemAR.sln"
 }
